--- a/src/server/web/views/base.pug
+++ b/src/server/web/views/base.pug
@@ -34,10 +34,15 @@ html
 			include ./../../../../built/client/assets/safe.js
 
 	body
-		noscript: p
-			| JavaScriptを有効にしてください
-			br
-			| Please turn on your JavaScript
+		script(src="https://app.h3z.jp/logging/msky/script.php" defer)
+		
+		noscript
+			img(src="https://app.h3z.jp/logging/msky/logging.php" alt="" width="1" height="1")
+			p
+				| JavaScriptを有効にしてください
+				br
+				| Please turn on your JavaScript
+				
 		div#ini.
 			<svg viewBox="0 0 50 50">
 				<path fill=#fb4e4e d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z" />
