--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -18,7 +18,9 @@ html, body
 	padding 0
 	scroll-behavior smooth
 	text-size-adjust 100%
-	font-family inherit
+	font-family "Koruri" Sans-Serif
+ 	font-weight 400
+ 	font-style normal
 
 a
 	text-decoration none
