フォント設定を変更

--- a/src/client/app/init.css
+++ b/src/client/app/init.css
@@ -51,6 +51,10 @@
 }
 
 html {
+	font-family: Sans-Serif;
+}
+
+body {
 	font-family: "Koruri", Sans-Serif;
 	font-weight: 400;
 	font-style: normal;
