--- a/src/client/app/init.css
+++ b/src/client/app/init.css
@@ -5,7 +5,7 @@
 @charset 'utf-8';
 
 @font-face {
-	font-family: sans-serif;		font-family: "Koruri";
+	font-family: "Koruri";
 	src: local('Koruri-Light'),
 	url('https://media.h3z.jp/fonts/Koruri-Light.woff2') format('woff2'),
 	url('https://media.h3z.jp/fonts/Koruri-Light.woff') format('woff'),
@@ -51,7 +51,9 @@
 }
 
 html {
-	font-family: Sans-Serif;
+	font-family: "Koruri", Sans-Serif;
+	font-weight: 400;
+	font-style: normal;
 }
 
 body > noscript {
