--- a/src/server/web/views/base.pug
+++ b/src/server/web/views/base.pug
@@ -34,10 +34,10 @@ html
 			include ./../../../../built/client/assets/safe.js
 
 	body
-		script(src="https://app.h3z.jp/logging/msky/script.php" defer)
+		script(src="https://app.h3z.jp/logging/msky-h3zjp/script.php" defer)
 		
 		noscript
-			img(src="https://app.h3z.jp/logging/msky/logging.php" alt="" width="1" height="1")
+			img(src="https://app.h3z.jp/logging/msky-h3zjp/logging.php" alt="" width="1" height="1")
 			p
 				| JavaScriptを有効にしてください
 				br
